crates/zendriver-mcp/tests/snapshots/schema_snapshots__cookies_persist_direction.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::cookies::PersistDirection)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: PersistDirection
description: "Direction selector for `browser_cookies_persist`."
oneOf:
  - description: "Snapshot every cookie in the browser store to `path` as pretty JSON."
    type: string
    const: save
  - description: "Replace the in-memory cookies with those parsed from `path`."
    type: string
    const: load
