crates/zendriver-mcp/tests/snapshots/schema_snapshots__cookies_set_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::cookies::CookiesSetInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: CookiesSetInput
description: "Input for `browser_cookies_set`."
type: object
properties:
  cookies:
    description: "Cookies to add. Existing cookies with matching `(name, domain, path)`\nare overwritten."
    type: array
    items:
      $ref: "#/$defs/CookieDto"
additionalProperties: false
required:
  - cookies
$defs:
  CookieDto:
    description: "Wire-only mirror of [`zendriver::Cookie`] — see module docs.\n\nField set + serde shape match the lib's `Cookie` exactly, so a `Vec<Cookie>`\nserialized by the lib parses cleanly as `Vec<CookieDto>` and vice versa.\nAdding [`JsonSchema`] here (without touching the lib) lets rmcp synthesize\ntool schemas."
    type: object
    properties:
      domain:
        description: "Domain the cookie applies to. Leading dot (`.example.com`) matches\nthe domain and all subdomains."
        type: string
      expires:
        description: "Expiration timestamp in seconds since Unix epoch. `None` for a\nsession cookie."
        type:
          - number
          - "null"
        format: double
      http_only:
        description: "`true` if the cookie has the `HttpOnly` flag."
        type: boolean
        default: false
      name:
        description: Cookie name.
        type: string
      partition_key:
        description: "CHIPS partition key — the top-level site the partitioned cookie is\nscoped to, plus whether it was set from a cross-site context.\nMirrors CDP's `Network.CookiePartitionKey` (M119+)."
        anyOf:
          - $ref: "#/$defs/CookiePartitionKeyDto"
          - type: "null"
      path:
        description: "URL path the cookie applies to (typically `\"/\"`)."
        type: string
      priority:
        description: "Eviction-priority hint (`Network.CookiePriority`). `None` lets\nChrome apply its default (`Medium`)."
        anyOf:
          - $ref: "#/$defs/CookiePriorityDto"
          - type: "null"
      same_party:
        description: "First-Party Sets membership flag (`sameParty`). Rarely set by hand;\npopulated by CDP on reads when known."
        type:
          - boolean
          - "null"
      same_site:
        description: "SameSite policy, if specified."
        anyOf:
          - $ref: "#/$defs/SameSiteDto"
          - type: "null"
      secure:
        description: "`true` if the cookie is only sent over HTTPS."
        type: boolean
        default: false
      source_port:
        description: "Source port of the origin that set the cookie. `-1` in CDP means\n\"unspecified\"; modeled as a plain `Option<i32>` here."
        type:
          - integer
          - "null"
        format: int32
      source_scheme:
        description: "Scheme of the origin that set the cookie\n(`Network.CookieSourceScheme`). Drives schemeful same-site."
        anyOf:
          - $ref: "#/$defs/CookieSourceSchemeDto"
          - type: "null"
      url:
        description: "Origin URL for set-side convenience. CDP infers `domain` + `path` +\n`secure` when present. Always `None` on cookies returned by reads."
        type:
          - string
          - "null"
      value:
        description: Cookie value.
        type: string
    required:
      - name
      - value
      - domain
      - path
  CookiePartitionKeyDto:
    description: "CHIPS partition-key mirror of [`zendriver::CookiePartitionKey`]."
    type: object
    properties:
      has_cross_site_ancestor:
        description: "`true` if the cookie was set from a cross-site context."
        type: boolean
        default: false
      top_level_site:
        description: "The top-level site (e.g. `\"https://example.com\"`)."
        type: string
    required:
      - top_level_site
  CookiePriorityDto:
    description: "Eviction-priority mirror of [`zendriver::CookiePriority`].\n\nSerializes as `\"Low\"` / `\"Medium\"` / `\"High\"`, matching the lib's enum\n(and CDP's `Network.CookiePriority`) exactly."
    oneOf:
      - description: Lowest retention priority — evicted first under storage pressure.
        type: string
        const: Low
      - description: Default priority when the attribute is unspecified.
        type: string
        const: Medium
      - description: Highest retention priority — evicted last.
        type: string
        const: High
  CookieSourceSchemeDto:
    description: "Source-scheme mirror of [`zendriver::CookieSourceScheme`].\n\nSerializes as `\"Unset\"` / `\"NonSecure\"` / `\"Secure\"`, matching the lib's\nenum (and CDP's `Network.CookieSourceScheme`) exactly."
    oneOf:
      - description: Scheme unknown / not recorded.
        type: string
        const: Unset
      - description: "Cookie was set over a non-secure (`http`) origin."
        type: string
        const: NonSecure
      - description: "Cookie was set over a secure (`https`) origin."
        type: string
        const: Secure
  SameSiteDto:
    description: "SameSite policy mirror of [`zendriver::SameSite`].\n\nSerializes with the same `\"Strict\" / \"Lax\" / \"None\"` capitalization as\nthe lib's enum (which matches the RFC and CDP), so on-the-wire payloads\nstay identical to what `zendriver::Cookie`'s own serde emits."
    oneOf:
      - description: First-party only — never sent on cross-site requests.
        type: string
        const: Strict
      - description: Sent on cross-site top-level navigations only.
        type: string
        const: Lax
      - description: "Always sent, including in third-party contexts."
        type: string
        const: None
